<resources>
    <string name="app_name">SocialCopsNewsApp</string>
    <string name="title_home">Headlines</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Saved</string>
    <string name="settings">Settings</string>
    <string name="aboutus">About us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about_us">AboutUS</string>
    <string name="title_activity_filter">FilterActivity</string>

</resources>
